Upgrade plugins, and attempt to work around a Travis CI memory limit